# architect-chain

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
config/: features.toml
deployment/: README.md  monitor-network.sh  multi-node-blockchain-deployment.sh  stop-network.sh  test-network.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  settings.rs
src/core/: README.md  block.rs  blockchain.rs  difficulty.rs  merkle.rs  mod.rs  monetary.rs  proof_of_work.rs  transaction.rs
src/core/fees/: calculator.rs  dynamic.rs  fixed.rs  mod.rs
src/error/: mod.rs
src/network/: README.md  dns_seeding.rs  mod.rs  node.rs  server.rs  simple_peer_manager.rs
src/storage/: memory_pool.rs  mod.rs  utxo_set.rs
src/storage/encrypted/: cipher.rs  mod.rs  wallet_encryption.rs
src/testnet/: mod.rs  test_utils.rs
src/utils/: crypto.rs  mod.rs  serialization.rs
src/wallet/: mod.rs  wallet.rs  wallets.rs
tests/: blockchain_integration_tests.rs
