[package]
name = "architect-chain"
version = "0.1.0"
edition = "2021"
authors = ["Juan Abimael Santos Castillo"]

[dependencies]
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
data-encoding = "2.9"
num-bigint = "0.4.3"
once_cell = "1.19.0"
ripemd = "0.1.3"
ring = "0.17.7"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0.108"
bs58 = "0.4.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = "0.8.5"
hex = "0.4.3"
toml = "0.8.8"
aes-gcm = "0.10.3"
argon2 = "0.5.2"
zeroize = { version = "1.7.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8.1"
